# desktop-apps

./: README.md  pyproject.toml
apps/dice1000/: main.py  utils.py
apps/material_calc/: main.py
tests/: conftest.py  test_dice100.py
