[tool.poetry]
name = "desktop-apps"
version = "0.1.0"
description = "Desktop applications"
authors = ["Viachaslau_Kazakou <sly.kazakoff@gmail.com>"]
packages = [{include = "apps"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt5 = "^5.15.11"
pyinstaller = "^6.12.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
