[tool.poetry]
name = "desktop-apps"
version = "0.1.0"
description = "Desktop applications"
authors = ["Viachaslau_Kazakou <sly.kazakoff@gmail.com>"]
packages = [{include = "apps"}]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
pyqt5 = "^5.15.11"
pyinstaller = "^6.12.0"
pytest = "^8.3.4"
black = "^25.1.0"
flake8 = "^7.1.2"
flake8-pyproject = "^1.2.3"
isort = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203, W503"

[tool.isort]
profile = "black"

